[gd_scene load_steps=10 format=3 uid="uid://cik30de5gaaah"]

[ext_resource type="Script" uid="uid://775s2w2dy5xy" path="res://scenes/ingame_scene.gd" id="1_objyc"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="1_y6ebv"]
[ext_resource type="PackedScene" uid="uid://jyv4g54adkmo" path="res://ui/overlays/pause_overlay.tscn" id="3_8o178"]
[ext_resource type="PackedScene" uid="uid://jy5n107wbw8u" path="res://scenes/components/victory_screen.tscn" id="4_7v5ay"]
[ext_resource type="PackedScene" uid="uid://chclxby2dol7b" path="res://scenes/components/game_over.tscn" id="5_2577t"]
[ext_resource type="Script" uid="uid://01s8cg5yixjr" path="res://scenes/components/game_over.gd" id="6_gadrd"]
[ext_resource type="Script" uid="uid://c6si5x6kuqyyu" path="res://scenes/fx_manager.gd" id="7_5jhce"]
[ext_resource type="Script" uid="uid://dtkvhkv2onuwd" path="res://scenes/health.gd" id="7_vus8m"]
[ext_resource type="PackedScene" uid="uid://ei2w5rhit0yn" path="res://scenes/components/health.tscn" id="8_1sh3m"]

[node name="IngameScene" type="Node2D" groups=["GameScene"]]
script = ExtResource("1_objyc")

[node name="UI" type="CanvasLayer" parent="."]

[node name="FadeOverlay" parent="UI" instance=ExtResource("1_y6ebv")]
unique_name_in_owner = true
visible = false

[node name="PauseOverlay" parent="UI" instance=ExtResource("3_8o178")]
unique_name_in_owner = true
process_mode = 2
visible = false

[node name="VictoryScreen" parent="UI" instance=ExtResource("4_7v5ay")]
unique_name_in_owner = true
visible = false

[node name="GameOver" parent="UI" instance=ExtResource("5_2577t")]
unique_name_in_owner = true
visible = false
script = ExtResource("6_gadrd")

[node name="LevelCleared" type="CenterContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/LevelCleared"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/LevelCleared/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Level cleared"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="UI/LevelCleared/VBoxContainer"]
layout_mode = 2
text = "Rising up to the next level of hell"
horizontal_alignment = 1

[node name="Health" type="HBoxContainer" parent="UI"]
unique_name_in_owner = true
offset_left = 11.0
offset_top = 342.0
offset_right = 63.0
offset_bottom = 382.0
script = ExtResource("7_vus8m")
health_indicator = ExtResource("8_1sh3m")

[node name="Label" type="Label" parent="UI/Health"]
layout_mode = 2
text = "Health"

[node name="LevelContainer" type="Node" parent="."]
unique_name_in_owner = true

[node name="FXManager" type="Node" parent="."]
script = ExtResource("7_5jhce")
